--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,18 +11,22 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
     "fastmcp>=2.12.4",
+    "langchain-community>=0.3.30",
+    "langchain-core>=0.3.76",
+    "langchain-ollama>=0.3.8",
+    "mcp-use>=1.3.11",
+    "ollama>=0.6.0",
     "pydantic>=2.11.7",
 ]
 
