--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ dependencies = [
     "mcp-use>=1.3.11",
     "ollama>=0.6.0",
     "pydantic>=2.11.7",
+    "langgraph>=0.2.34",
+    "httpx>=0.27.2",
+    "aiohttp>=3.10.10",
 ]
 
 [project.optional-dependencies]
